test/fail/variance/ensure_function_params_contravariant.lly
#[
SyntaxError: Cannot assign type 'Function (Two)' to type 'Function (One)'.
    from ensure_function_params_contravariant.lly:13
]#

class One {}
class Two < One {}

define f(a: One) {}
define g(a: Two) {}

var v = f
    v = g
